		ecsuite/ecsuite.params
	Added Product and Schwefel to ECSuite
	Modified ECSuite so that Griewangk and Schwefel are scaled to fit into [-5.12, 5.12]
		so as to be comparable with other fitness functions.
	Modified Evolve so it doesn't catch errors in jobs; this doesn't work right with
		the most common error (out of memory)
	griewangk -> griewank
	Added sequential breeding to SimpleBreeder, though it's not implemented in most
		SimpleBreeder subclasses.
	Removed the deletion of trials in the coevolution examples, and added requirement
		that in postProcessPopulation the fitness is only updated if the individual
		doesn't have his evaluated flag set.
	Added sequential evaluation to the Coevolution system. Modified stats files,
		evaluators, etc.
	Modified GroupedProblemForm to require additional parameters to enable sequential
		evaluation.  Had to be done, sorry.
	Bug fixes to SimpleBreeder's handling of elites when doing sequential breeding
	Modifications to ECSuite to make its standard ranges more standard, and added
		San Marino problem 
	Major change to SimpleShortStatistics: added the "do-subpops" parameter, which is
		by default FALSE.  If it is FALSE, then only per-population statistics
		are printed (this is new).  If it is TRUE, then per-subpopulation statistics
		are printed, one per subpopulation, followed by the per-population statistics.
		It used to be that only per-subpopulation statistics were printed.  This
		enables large numbers of subpopulations (like 100) to use SimpleShortStatistics
		without generating giant files.
	Also deprecated the "gather-full" parameter and instead include "do-size" and "do-time"
		in SimpleShortStatistics.
	Also changed the columns in SimpleShortStatistics.
	Double-check that subpopulations are the right size during sequential breeding.
	Fixed error in nsga2.params which erroneously said you had to use 
		NSGA2TournamentSelection.  Thanks to Vinh Dang <vdang@our.ecu.edu.au>.